...
                        <viewControllerLayoutGuide type="bottom" id="Iv9-tI-3d9"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="V9F-PI-eeb">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="Bxz-Rw-ifg">
                                <rect key="frame" x="0.0" y="20" width="375" height="56"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="GZs-Pn-8kv" id="F49-Jl-wMk"/>
                                </connections>
                            </searchBar>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="160" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4WE-ot-egZ">
                                <rect key="frame" x="0.0" y="76" width="375" height="591"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchVideoResultCell" rowHeight="160" id="zXr-jG-iqn" customClass="SearchVideoResultCell" customModule="VideoSearchDemo" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="28" width="375" height="160"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zXr-jG-iqn" id="XTc-Mq-5i7">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="159.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
...
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <nil key="highlightedColor"/>
                                <color key="shadowColor" cocoaTouchSystemColor="darkTextColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                        <accessibility key="accessibilityConfiguration" identifier="Video Detail VC">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstItem="kdP-0m-kgQ" firstAttribute="leading" secondItem="Vlb-U2-YEz" secondAttribute="leading" constant="8" id="4NW-DR-vZZ"/>
                            <constraint firstItem="Fy1-ur-QUX" firstAttribute="top" secondItem="o6k-sH-up5" secondAttribute="bottom" constant="8" id="6Rh-vZ-zY2"/>
                            <constraint firstItem="JgU-Fd-nmH" firstAttribute="top" secondItem="Fy1-ur-QUX" secondAttribute="bottom" constant="8" id="8gZ-uX-yvf"/>
...
